bug fixes, enhancements

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -209,3 +209,9 @@ a:hover {
     width: 50% !important;
   }
 }
+
+.overflow-ellipsis {
+  text-overflow: ellipsis;
+  overflow     : hidden;
+  width: 100%;
+}
