--- a/src/css/style.css
+++ b/src/css/style.css
@@ -45,16 +45,28 @@ body::-webkit-scrollbar-thumb {
   color: black !important;
 }
 
-@media (max-width:301px) {
+#settingsBtn button {
+  padding-right: 0 !important;
+}
+
+@media (max-width:640px) {
   #emptySec {
     width    : 0px !important;
     flex-grow: 0;
   }
+
   .navbar a {
-    margin: .5rem auto 0 !important;
+    margin: .5rem auto 0 0 !important;
   }
+
   .navbar-center {
     width: 100%;
+    order: 3;
+  }
+
+  #settingsBtn {
+    order     : 2;
+    margin-top: 15px;
   }
 }
 
